# code-memory

./: .gitignore  CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  Makefile  README.md  api_types.py  code-memory.spec  db.py  doc_parser.py  errors.py  git_search.py  logging_config.py  parser.py  pyproject.toml  queries.py  server.json  server.py  validation.py
.github/workflows/: ci.yml  publish-mcp.yml  publish.yml  release-binaries.yml
code_memory/: __init__.py  db.py  doc_parser.py  errors.py  git_search.py  logging_config.py  parser.py  queries.py  server.py  validation.py
hooks/: hook-sentence_transformers.py  hook-sqlite_vec.py  hook-tree_sitter.py  hook-tree_sitter_languages.py
prompts/: milestone_1.xml  milestone_2.xml  milestone_3.xml  milestone_4.xml  milestone_5.xml  milestone_6.xml
scripts/: download_model.py
tests/: __init__.py  conftest.py  test_dead_code.py  test_errors.py  test_logging.py  test_main.py  test_tools.py  test_validation.py
